--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -26,6 +26,8 @@ build:
     python: "3.6"
   apt_packages:
     - clang
+  commands:
+    - mkdir -p docs/_static
 
 # Install requirements required to build your docs
 python:
