--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -27,7 +27,8 @@ build:
   apt_packages:
     - clang
   commands:
-    - cp -r src/main/python/pyPOCQuantU/pypocquant/manual/ui_images _build/html/ui_images
+    - pwd && ls
+    - cp -r /src/main/python/pyPOCQuantU/pypocquant/manual/ui_images _build/html/ui_images
 
 
 # Install requirements required to build your docs
