--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -29,6 +29,7 @@ build:
   commands:
     - pwd && ls
     - ls src/main/python/pyPOCQuantUI/
+    - mkdir -p _build/html/ui_images
     - cp -r src/main/python/pyPOCQuantUI/pypocquant/manual/ui_images _build/html/ui_images
 
 
