--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -29,8 +29,10 @@ build:
   commands:
     - pwd && ls
     - ls src/main/python/pyPOCQuantUI/
-    - mkdir -p $READTHEDOCS_OUTPUT/html/ui_images
-    - cp -r src/main/python/pyPOCQuantUI/pypocquant/manual/ui_images $READTHEDOCS_OUTPUT/html/ui_images
+    - mkdir -p docs/_static
+    - ls docs/
+    # - mkdir -p $READTHEDOCS_OUTPUT/html/ui_images
+    # - cp -r src/main/python/pyPOCQuantUI/pypocquant/manual/ui_images $READTHEDOCS_OUTPUT/html/ui_images
 
 
 # Install requirements required to build your docs
