--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -31,8 +31,8 @@ build:
     - ls src/main/python/pyPOCQuantUI/
     - mkdir -p docs/_static
     - ls docs/
-    - mkdir -p $READTHEDOCS_OUTPUT/html/ui_images
-    - cp -r src/main/python/pyPOCQuantUI/pypocquant/manual/ui_images $READTHEDOCS_OUTPUT/html/ui_images
+    # - mkdir -p $READTHEDOCS_OUTPUT/html/ui_images
+    # - cp -r src/main/python/pyPOCQuantUI/pypocquant/manual/ui_images $READTHEDOCS_OUTPUT/html/ui_images
 
 
 # Install requirements required to build your docs
