--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -33,6 +33,7 @@ build:
     - mkdir -p docs/_build/html
     - ls docs/
     - cp -r src/main/python/pyPOCQuantUI/pypocquant/manual/ui_images docs/_build/html/ui_images
+    - ls docs/_build/html/ui_images
 
 
 # Install requirements required to build your docs
