--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -34,6 +34,7 @@ build:
     - ls docs/
     - cp -r src/main/python/pyPOCQuantUI/pypocquant/manual/ui_images docs/_build/html/ui_images
     - ls docs/_build/html/ui_images
+    - python make_docs.py
 
 
 # Install requirements required to build your docs
