--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -30,14 +30,15 @@ build:
   tools:
     python: "3.6"
   apt_packages:
-    - clang  
-  post_install:
-    - pwd && ls
-    - ls src/main/python/pyPOCQuantUI/
-    - mkdir -p docs/_static
-    - mkdir -p docs/_build/html
-    - ls docs/
-    - cp -r src/main/python/pyPOCQuantUI/pypocquant/manual/ui_images docs/_build/html/ui_images
-    - ls docs/_build/html/ui_images
+    - clang
+  jobs:
+    post_install:
+      - pwd && ls
+      - ls src/main/python/pyPOCQuantUI/
+      - mkdir -p docs/_static
+      - mkdir -p docs/_build/html
+      - ls docs/
+      - cp -r src/main/python/pyPOCQuantUI/pypocquant/manual/ui_images docs/_build/html/ui_images
+      - ls docs/_build/html/ui_images
 
 
