--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -40,6 +40,7 @@ build:
       - ls docs/
       - cp -r src/main/python/pyPOCQuantUI/pypocquant/manual/ui_images docs/_build/html/ui_images
       - cp -r src/main/python/pyPOCQuantUI/pypocquant/manual/ui_images docs/_build/ui_images
+      - cp -r src/main/python/pyPOCQuantUI/pypocquant/manual/ui_images docs/_static/ui_images
       - ls docs/_build/html/ui_images
 
 
