--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -42,5 +42,6 @@ build:
       - cp -r src/main/python/pyPOCQuantUI/pypocquant/manual/ui_images docs/_build/ui_images
       - cp -r src/main/python/pyPOCQuantUI/pypocquant/manual/ui_images docs/_static/ui_images
       - ls docs/_build/html/ui_images
+      - python -m sphinx -b html docs/ docs/_build/html
 
 
