--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -37,6 +37,7 @@ build:
       - ls src/main/python/pyPOCQuantUI/
       - mkdir -p docs/_static
       - mkdir -p docs/_build/html
+      - mkdir -p docs/_images
       - ls docs/
       - cp -r src/main/python/pyPOCQuantUI/pypocquant/manual/ui_images docs/_build/html/ui_images
       - cp -r src/main/python/pyPOCQuantUI/pypocquant/manual/ui_images docs/_build/ui_images
