--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -62,6 +62,7 @@ build:
       - ls docs/_static
       - ls _readthedocs/html/_images
       - ls ../_readthedocs/html/
+      - find ../../artifacts/${READTHEDOCS_VERSION}/sphinx/
       # - python -m sphinx -b html docs/ docs/_build/html
 
 
