--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -35,35 +35,16 @@ build:
     post_build:
       - pwd && ls
       - ls src/main/python/pyPOCQuantUI/
-      - mkdir -p docs/_static
-      - mkdir -p docs/_build/html
-      - mkdir -p docs/_images
-      - mkdir -p _readthedocs/html/ui_images
-      - mkdir -p _readthedocs/html/_images/ui_images
-      - mkdir -p ../_readthedocs/html/ui_images
-      - mkdir -p ../_readthedocs/html/_images/ui_images
       - mkdir -p ../latest/_readthedocs/html/ui_images
-      - mkdir -p docs/_build/html/_images
-      - mkdir -p docs/_build/html/_static
-      - ls docs/
-      - cp -r src/main/python/pyPOCQuantUI/pypocquant/manual/ui_images docs/_build/html/ui_images
-      - cp -r src/main/python/pyPOCQuantUI/pypocquant/manual/ui_images docs/_build/ui_images
-      - cp -r src/main/python/pyPOCQuantUI/pypocquant/manual/ui_images docs/_static/ui_images
-      - cp -r src/main/python/pyPOCQuantUI/pypocquant/manual/ui_images docs/_images/ui_images
-      - cp -r src/main/python/pyPOCQuantUI/pypocquant/manual/ui_images docs/_build/html/_images/ui_images
-      - cp -r src/main/python/pyPOCQuantUI/pypocquant/manual/ui_images docs/_build/html/_static/ui_images
-      - cp -r src/main/python/pyPOCQuantUI/pypocquant/manual/ui_images _readthedocs/html/ui_images
-      - cp -r src/main/python/pyPOCQuantUI/pypocquant/manual/ui_images _readthedocs/html/_images/ui_images
-      - cp -r src/main/python/pyPOCQuantUI/pypocquant/manual/ui_images ../_readthedocs/html/ui_images
-      - cp -r src/main/python/pyPOCQuantUI/pypocquant/manual/ui_images ../_readthedocs/html/_images/ui_images
       - cp -r src/main/python/pyPOCQuantUI/pypocquant/manual/ui_images/* ../latest/_readthedocs/html/ui_images
-      - ls docs/_build/html/ui_images
-      - ls docs/_build/html/_static
-      - ls docs/_build/html/_images
-      - ls docs/_images
-      - ls docs/_static
-      - ls _readthedocs/html/_images
-      - ls ../_readthedocs/html/
+      - mkdir -p ../latest/_readthedocs/html/demo_image
+      - cp -r src/main/python/pyPOCQuantUI/pypocquant/manual/demo_image/* ../latest/_readthedocs/html/demo_image
+      - mkdir -p ../latest/_readthedocs/html/problem_solutions
+      - cp -r src/main/python/pyPOCQuantUI/pypocquant/manual/problem_solutions/* ../latest/_readthedocs/html/problem_solutions
+      - mkdir -p ../latest/_readthedocs/html/setup
+      - cp -r src/main/python/pyPOCQuantUI/pypocquant/manual/setup/* ../latest/_readthedocs/html/setup
+      - mkdir -p ../latest/_readthedocs/html/src/main/resources/base/img
+      - cp -r src/main//resources/base/img/* ../latest/_readthedocs/html/src/main/resources/base/img
       - ls -R ../
       # - python -m sphinx -b html docs/ docs/_build/html
 
